@@ -1,3 +1,11 @@
+2004-01-28  Theodore A. Roth  <troth@openavr.org>
+[Contributed by Nils Kristian Strom <nilsst@omegav.ntnu.no>]
+
+	* configure.ac (AC_INIT): Bump version.
+	* src/ioreg.cc (atmega162_io_registers): Define.
+	* src/ioreg.h (atmega162_io_registers): Declare.
+	* src/jtagio.cc (deviceDefinitions): Install mega162 io register defs.
+
 2004-01-21  Theodore A. Roth  <troth@openavr.org>
 [Contributed by Bjoern Haase <bjoern.m.haase@web.de>]
 
